--- a/index.html
+++ b/index.html
@@ -127,10 +127,11 @@
         .home {
             height: 100vh;
             display: flex;
-            background: linear-gradient(135deg, rgba(52, 152, 219, 0.1), rgba(231, 76, 60, 0.1)), url('survey-bg.jpg') no-repeat center center/cover;
+            background: linear-gradient(135deg, rgba(52, 152, 219, 0.1), rgba(231, 76, 60, 0.1)), url('prem1.jpg') no-repeat center center/cover;
             align-items: center;
             padding: 0 20px;
-            color: var(--dark-color);
+            color: #fff;
+            text-shadow: 1px 1px 3px rgba(0,0,0,0.8);
         }
         
         .home .home-content {
@@ -146,7 +147,7 @@
             font-size: 56px;
             font-weight: 700;
             margin-bottom: 10px;
-            color: var(--secondary-color);
+            color: #fff;
         }
         
         .home .text-3 {
@@ -385,7 +386,7 @@
             justify-content: center;
             width: 40px;
             height: 40px;
-            background: var(--primary-color);
+            background: var(--accent-color); /* Changed to accent color */
             color: #fff;
             border-radius: 50%;
             margin-right: 15px;
@@ -741,8 +742,8 @@
                             </div>
                         </div>
                         <div class="row social">
-                            <a href="https://www.facebook.com/prem.khadka.1460693" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                            <a href="https://www.linkedin.com/in/premprakash-khadka-32b521345" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://www.facebook.com/prem.khadka.1460693" target="_blank" style="background: #3b5998;"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://www.linkedin.com/in/premprakash-khadka-32b521345" target="_blank" style="background: #0077b5;"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                 </div>
